fix images not showing

--- a/style.scss
+++ b/style.scss
@@ -173,7 +173,7 @@ section.hero {
     }
     .hero__bg {
         position: relative;
-        background-image: url(/images/pexels-pixabay-417173.jpg);
+        background-image: url(images/pexels-pixabay-417173.jpg);
         height: calc(32rem + 40vw);
         width: 100%;
         display: flex;
